--- a/overrides/partials/index.html
+++ b/overrides/partials/index.html
@@ -385,7 +385,7 @@
 {% block hero %}
   <!-- HERO with image background -->
   <section class="home-hero">
-    <img class="hero-bg" src="{{ base_url }}/assets/images/mars/hero.jpg" alt="Hero Background" loading="eager">
+    <img class="hero-bg" src="{{ base_url }}/assets/images/hero.jpg" alt="Hero Background" loading="eager">
     
     <div class="home-hero__inner">
         <h1>Metropolitan Aerospace Rocket Society</h1>
@@ -406,16 +406,16 @@
   <section class="gallery-section">
     <h2>Gallery</h2>
     <div class="vertical-photos">
-      <img src="{{ base_url }}/assets/images/mars/1.jpg" alt="Photo 1" class="vertical-photo" loading="lazy">
-      <img src="{{ base_url }}/assets/images/mars/8.png" alt="Photo 2" class="vertical-photo" loading="lazy">
-      <img src="{{ base_url }}/assets/images/mars/3.jpg" alt="Photo 3" class="vertical-photo" loading="lazy">
-      <img src="{{ base_url }}/assets/images/mars/11.png" alt="Photo 4" class="vertical-photo" loading="lazy">
-      <img src="{{ base_url }}/assets/images/mars/pcb.jpg" alt="Photo 5" class="vertical-photo" loading="lazy">
-      <img src="{{ base_url }}/assets/images/mars/12.png" alt="Photo 6" class="vertical-photo" loading="lazy">
-      <img src="{{ base_url }}/assets/images/mars/2.jpg" alt="Photo 7" class="vertical-photo" loading="lazy">
-      <img src="{{ base_url }}/assets/images/mars/zn.png" alt="Photo 8" class="vertical-photo" loading="lazy">
-      <img src="{{ base_url }}/assets/images/mars/6.png" alt="Photo 9" class="vertical-photo" loading="lazy">
-      <img src="{{ base_url }}/assets/images/mars/15.png" alt="Photo 10" class="vertical-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/1.jpg" alt="Photo 1" class="vertical-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/8.png" alt="Photo 2" class="vertical-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/3.jpg" alt="Photo 3" class="vertical-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/11.png" alt="Photo 4" class="vertical-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/pcb.jpg" alt="Photo 5" class="vertical-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/12.png" alt="Photo 6" class="vertical-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/2.jpg" alt="Photo 7" class="vertical-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/zn.png" alt="Photo 8" class="vertical-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/6.png" alt="Photo 9" class="vertical-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/15.png" alt="Photo 10" class="vertical-photo" loading="lazy">
     </div>
     
     <!-- About Section -->
@@ -429,7 +429,7 @@
     </div>
     
     <div class="group-photo-container">
-      <img src="{{ base_url }}/assets/images/mars/group_photo.jpg" alt="Group Photo" class="group-photo" loading="lazy">
+      <img src="{{ base_url }}/assets/images/group_photo.jpg" alt="Group Photo" class="group-photo" loading="lazy">
     </div>
   </section>
 
